tests/miniJava/neg/004397_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public true java ( ) { return 0 ; } }
